--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.2.3
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.0
+  flutter_svg: ^2.0.5
 
   
 
