--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.5
+  pull_to_refresh: ^2.0.0
 
   
 
